packages/rolldown/tests/fixtures/builtin-plugin/transform/main.js.snap
Error: Build failed with 1 error:

[UNHANDLEABLE_ERROR] Error: Something went wrong inside native plugin `builtin:transform`. Please report this problem at https://github.com/rolldown/rolldown/issues.

[builtin:transform] Error: Namespace tags are not supported by default. React's JSX doesn't support namespace tags. You can set `throwIfNamespace: false` to bypass this warning.
   ╭─[ jsx.abc:1:19 ]
   │
 1 │ export const a = <foo:bar />;
   │                   ───┬───  
   │                      ╰───── 
───╯

